--- a/manual/full_global_snp.Rmd
+++ b/manual/full_global_snp.Rmd
@@ -49,10 +49,10 @@ This rule uses ANGSD to identify single nucleotide polymorphisms (SNPs) that seg
   * `-P`: number of threads this rule uses. This is defaulted to be 8 but can be modified in the config file. 
   * `-minQ`: minimum sequence quality threshold. This is defaulted to be 20 but can be modified in the config file. 
   * `-minMapQ`: minimum mapping quality threshold. This is defaulted to be 20 but can be modified in the config file. 
-  * `-GL` : the genotype likelihood model that ANGSD uses. This is defaulted to be 1 but can be modified in the config file. 1 for  SAMtools, 2 for GATK, 3 for SOAPsnp, and 4 for SYK (see https://www.popgen.dk/angsd/index.php/Genotype_Likelihoods#Options for details)
+  * `-GL` : the genotype likelihood model that ANGSD uses. This is defaulted to be 1 but can be modified in the config file. 1 for SAMtools, 2 for GATK, 3 for SOAPsnp, and 4 for SYK (see https://www.popgen.dk/angsd/index.php/Genotype_Likelihoods#Options for details)
   * `-SNP_pval`: SNP p-value threshold. This is defaulted to be 1e-6 but can be modified in the config file.
   * `-minMaf`: minimum minor allele frequency threshold for a site to be considered as a SNP. This is defaulted to be 0.05 can be modified in the config file.
-  * `-minInd`: minimum number of individuals that have to have data  for a site to be included. This is defaulted to be 50% of the total sample size but can be modified in the config file.
+  * `-minInd`: minimum number of individuals that have to have data for a site to be included. This is defaulted to be 50% of the total sample size but can be modified in the config file as a different proportion.
   * `-setMinDepthInd`: minimum read depth an individual must have to be included in the count of individuals for `-minInd`. This is defaulted to be 1 and can be modified in the config file. 
   * `{params.extra}`:   optional arguments to be passed to the SNP calling step in ANGSD. These arguments could add extra input files to analyses (e.g. ancestral genome and individual inbreed coefficients). They can also be used to specify additional filters or additional analyses. For example, users can use the "-site" flag here to constrain analysis on a predefined set of SNPs. Or, users can use the "-rmTriallelic" flag followed by a p-value threshold to remove sites with more than two alleles.
 
